--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,6 +2,13 @@
 
 <h1>Articles</h1>
 
+<%= cl_image_tag("jtmdpsr7zmxjay6dfep7",
+      width: 400, height: 300, crop: :fill) %>
+
+<%= cl_image_tag("ryohu3hul4wvggz8rf5w",
+      width: 150, height: 150, crop: :thumb, gravity: :face) %>
+
+
 <table>
   <thead>
     <tr>
